cmake_minimum_required(VERSION 3.21)
project(c_project)

set(CMAKE_CXX_STANDARD 14)

add_executable(c_project
        source_code/DS/Homework/list_demo1.cpp source_code/DS/DS_Learning/stack&queue/stack1.cpp source_code/DS/DS_Learning/stack&queue/stack2.cpp source_code/DS/DS_Learning/stack&queue/queue1.cpp source_code/DS/DS_Learning/stack&queue/queue2.cpp)
