cmake_minimum_required(VERSION 3.21)
project(c_project)

set(CMAKE_CXX_STANDARD 14)

#add_executable(c_project source_code/DS/DS_Learning/stack_queue/stackExample.cpp)
#add_executable(c_project source_code/DS/DS_Learning/stack_queue/ShareStack.cpp)
#add_executable(c_project source_code/DS/DS_Learning/stack_queue/StackQueue.cpp )
#add_executable(c_project source_code/DS/Homework/stack_queue/stack1.cpp)
#add_executable(c_project source_code/DS/DS_Learning/list/matrix.cpp)
#add_executable(c_project source_code/DS/DS_Learning/string/string1.cpp)
#add_executable(c_project source_code/DS/DS_Learning/string/KMP.cpp)
add_executable(c_project source_code/DS/Homework/string/string.cpp)